--- a/squirrels_love_chimps_lists/plugin.xml
+++ b/squirrels_love_chimps_lists/plugin.xml
@@ -1,8 +1,8 @@
 <plugin>
 	<nom>Squirrels Love Chimps Lists</nom>
-	<auteur>[Spade->http://blog.spade.be/] et [Rainer Müller->http://www.mychacra.net]</auteur>
-	<licence>GNU/GLP</licence>
-	<version>1.1.0</version>
+	<auteur>[Spade->http://www.spade.be/labs/squirrels-love-chimps] et [Rainer Müller->http://www.mychacra.net]</auteur>
+	<licence>MIT</licence>
+	<version>1.1.20</version>
 	<etat>test</etat>
 	<slogan>Gestion de mailing listes de Mailchimp</slogan>
 	<description>>Gestion de mailing listes de [Mailchimp->http://mailchimp.com/] Inspiré  des fonctionnalités du plugin Wordpress [Autochimp-http://wordpress.org/extend/plugins/autochimp/] avec quelques "emprunt" de code du plugin SPIP "MailChimp de [Ben->http://www.nursit.net]</description>
